source/_patterns/02-molecules/section/_section.scss
$_config_schemes: (
  base: (
    alt-background: $theme-color-base-lightest,
    alt-background-border: 0,
    alt-background-border-color: "transparent",
    alt-margin-top: 10,
  ),
  local: (),
  pro: (
    alt-background: "gray-1",
    alt-background-border: 1px,
    alt-background-border-color: "gray-3",
    alt-margin-top: 0,
  ),
);

$_config: map-merge-by-keys($_config_schemes, base, $_config_schemes, $scheme);

.jcc-section {
  @include u-padding-top(9);

  .jcc-section {
    &:first-child {
      @include u-padding-top(0);
    }

    .jcc-section__inner {
      @include u-padding-x(0);
    }
  }
}

.jcc-section--background-alt {
  @include u-margin-top(map-get($_config, alt-margin-top));
  @include u-padding-bottom(8);
  @include u-bg(map-get($_config, alt-background));
  @include u-border-top(
    map-get($_config, alt-background-border),
    map-get($_config, alt-background-border-color)
  );

  + .jcc-section--background-alt,
  + .jcc-section--background-none {
    margin-top: -5.5rem;
  }
}

.jcc-section--spacing-none {
  @include u-margin-top(0);
  @include u-padding-top(0);
  @include u-padding-bottom(0);
}

.jcc-section--container {
  .jcc-section__inner {
    @include grid-container(widescreen);

    // Adding table trick to avoid overflow in any section
    .usa-table td {
      white-space: normal;
    }
  }
}

.jcc-section__subsections {
  @include grid-row();
  @include grid-gap(6);
}

.jcc-section__subsection--col {
  &-4 {
    @include grid-col(12);
    @include at-media("tablet") {
      @include grid-col(3);
    }
  }

  &-6 {
    @include grid-col(12);
    @include at-media("tablet") {
      @include grid-col(6);
    }
  }

  &-75 {
    @include grid-col(12);
    @include at-media("tablet-lg") {
      @include grid-col(9);
    }
  }

  &-25 {
    @include grid-col(12);
    @include at-media("tablet-lg") {
      @include grid-col(3);
    }
  }

  &-60 {
    @include grid-col(12);
    @include at-media("tablet") {
      @include grid-col(7);
    }
  }

  &-40 {
    @include grid-col(12);
    @include at-media("tablet") {
      @include grid-col(5);
    }
  }
}

.jcc-section--layout-sidenav {
  @include at-media("tablet-lg") {
    .jcc-section__subsection {
      &:last-child {
        @include u-order(first);
      }

      &:first-child {
        @include u-order(last);
      }
    }
  }
}

